--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@
 
 buildscript {
     ext {
-        vXnat = "1.7.5"
+        vXnat = "1.7.6-SNAPSHOT"
         vGitPlugin = "0.12.0-rc2"
         vLombokPlugin = "1.14"
         vDepMgmtPlugin = "1.0.6.RELEASE"
@@ -50,7 +50,7 @@ apply plugin: "maven-publish"
 apply plugin: "xnat-data-builder"
 
 group "org.nrg.xnat.auth"
-version "1.0.0"
+version "1.0.1-SNAPSHOT"
 
 repositories {
     mavenLocal()
