--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@
 
 buildscript {
     ext {
-        vXnat = "1.7.6"
+        vXnat = "1.7.7-INTERNAL"
         vGitPlugin = "0.12.0-rc2"
         vLombokPlugin = "2.1"
         vDepMgmtPlugin = "1.0.7.RELEASE"
@@ -70,8 +70,8 @@ repositories {
     }
 }
 
-sourceCompatibility = 1.7
-targetCompatibility = 1.7
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
 
 dependencyManagement.imports {
     mavenBom "org.nrg:parent:${vXnat}"
@@ -111,9 +111,6 @@ dependencies {
 
     compileOnly "com.google.code.findbugs:jsr305"
     compileOnly "org.apache.ivy:ivy:2.4.0"
-    compileOnly("stratum:stratum") {
-        transitive = false
-    }
 
     testImplementation "junit:junit"
     testImplementation "org.springframework:spring-test"
@@ -125,23 +122,6 @@ idea {
         outputDir = compileJava.destinationDir
         testOutputDir = compileTestJava.destinationDir
     }
-}
-
-if (hasProperty("rt.17.jar")) {
-    // Solution for bootstrap classpath warning and possible issues with compatibility with 1.7 libraries
-    // was taken from this post on discuss.gradle.org: http://bit.ly/24xD9j0
-    def rt17jar = property "rt.17.jar"
-    logger.info "Using ${rt17jar} as the bootstrap class path jar."
-    gradle.projectsEvaluated {
-        tasks.withType(JavaCompile) { task ->
-            task.options.fork = true
-            task.options.compilerArgs << "-XDignore.symbol.file"
-            task.options.bootstrapClasspath = files(rt17jar)
-        }
-    }
-} else {
-    logger.warn "No value was set for the rt.17.jar build property, using the default bootstrap class path. You should consider setting rt.17.jar to indicate a jar file containing the Java 1.7 run-time library:\n"
-    logger.warn "  ./gradlew -Prt.17.jar=rt-1.7.0_45.jar war\n"
 }
 
 jar {
