--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@
 
 buildscript {
     ext {
-        vXnat = "1.7.7-INTERNAL"
+        vXnat = "1.8.0-SNAPSHOT"
         vGitPlugin = "0.12.0-rc2"
         vLombokPlugin = "2.1"
         vDepMgmtPlugin = "1.0.7.RELEASE"
