--- a/build.gradle
+++ b/build.gradle
@@ -50,7 +50,7 @@ apply plugin: "maven-publish"
 apply plugin: "xnat-data-builder"
 
 group "org.nrg.xnat.auth"
-version "1.0.1"
+version "1.1.0-SNAPSHOT"
 
 repositories {
     mavenLocal()
