--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 /*
  * xnat-ldap-auth-plugin: build.gradle
- * XNAT http://www.xnat.org
+ * XNAT https://www.xnat.org
  * Copyright (c) 2019, Washington University School of Medicine
  * All Rights Reserved
  *
@@ -9,65 +9,32 @@
 
 buildscript {
     ext {
-        vXnat = "1.8.1-SNAPSHOT"
-        vGitPlugin = "0.12.0-rc2"
-        vLombokPlugin = "2.1"
-        vDepMgmtPlugin = "1.0.7.RELEASE"
-    }
-    repositories {
-        mavenLocal()
-        jcenter()
-        maven {
-            url "https://plugins.gradle.org/m2/"
-        }
-        maven {
-            url "https://nrgxnat.jfrog.io/nrgxnat/libs-release"
-            name "XNAT Release Repository"
-        }
-        maven {
-            url "https://nrgxnat.jfrog.io/nrgxnat/libs-snapshot"
-            name "XNAT Snapshot Repository"
-        }
-    }
-    dependencies {
-        classpath "gradle.plugin.com.palantir.gradle.gitversion:gradle-git-version:${vGitPlugin}"
-        classpath "io.franzbecker:gradle-lombok:${vLombokPlugin}"
-        classpath "io.spring.gradle:dependency-management-plugin:${vDepMgmtPlugin}"
-        classpath "org.nrg.xnat.build:xnat-data-builder:${vXnat}"
+        vXnat = "1.8.0"
     }
 }
 
-apply plugin: "application"
-apply plugin: "com.palantir.git-version"
-apply plugin: "eclipse"
-apply plugin: "idea"
-apply plugin: "io.franzbecker.gradle-lombok"
-apply plugin: "io.spring.dependency-management"
-apply plugin: "jacoco"
-apply plugin: "java"
-apply plugin: "maven"
-apply plugin: "maven-publish"
-apply plugin: "xnat-data-builder"
+plugins {
+    id "eclipse"
+    id "idea"
+    id "jacoco"
+    id "java"
+    id "maven-publish"
+    id "com.palantir.git-version" version "0.12.3"
+    id "io.franzbecker.gradle-lombok" version "4.0.0"
+    id "io.spring.dependency-management" version "1.0.11.RELEASE"
+    id "org.nrg.xnat.build.xnat-data-builder" version "1.8.0"
+}
 
-group "org.nrg.xnat.auth"
+group "org.nrg.xnatx.plugins.auth"
 version "1.1.0-SNAPSHOT"
+description = "XNAT LDAP Authentication Provider"
 
 repositories {
     mavenLocal()
-    maven {
-        url "http://maven.imagej.net/content/groups/public"
-        name "ImageJ Maven Repository"
-    }
-    jcenter()
     mavenCentral()
-    maven {
-        url "https://nrgxnat.jfrog.io/nrgxnat/libs-release"
-        name "XNAT Release Repository"
-    }
-    maven {
-        url "https://nrgxnat.jfrog.io/nrgxnat/libs-snapshot"
-        name "XNAT Snapshot Repository"
-    }
+    jcenter()
+    maven { url "https://nrgxnat.jfrog.io/nrgxnat/libs-release" }
+    maven { url "https://nrgxnat.jfrog.io/nrgxnat/libs-snapshot" }
 }
 
 sourceCompatibility = 1.8
@@ -78,8 +45,6 @@ dependencyManagement.imports {
 }
 
 dependencies {
-    annotationProcessor "org.nrg:framework"
-
     implementation("org.nrg.xnat:web") {
         transitive = false
     }
@@ -104,16 +69,11 @@ dependencies {
     implementation "org.hibernate.javax.persistence:hibernate-jpa-2.1-api"
     implementation "com.google.guava:guava"
     implementation "org.slf4j:slf4j-api"
-    implementation "log4j:log4j"
 
     implementation "org.springframework.security:spring-security-web"
     implementation "javax.servlet:javax.servlet-api"
 
     compileOnly "com.google.code.findbugs:jsr305"
-    compileOnly "org.apache.ivy:ivy:2.4.0"
-
-    testImplementation "junit:junit"
-    testImplementation "org.springframework:spring-test"
 }
 
 idea {
@@ -124,14 +84,29 @@ idea {
     }
 }
 
-jar {
-    baseName = "xnat-${project.name}"
-    manifest {
-        attributes "Application-Name": "XNAT LDAP Authentication Provider",
-                "Build-Date": new Date(),
-                "Implementation-Sha": gitVersion(),
-                "Implementation-Version": version
-    }
+// Pulls in the Jenkins BUILD_NUMBER environment variable if available.
+def buildDate = new Date()
+def buildNumber = System.getenv().BUILD_NUMBER?.toInteger() ?: "Manual"
+def isDirty, branchName, gitHash, gitHashFull, commitDistance, lastTag, isCleanTag
+
+try {
+    def gitDetails = versionDetails()
+    isDirty = gitVersion().endsWith ".dirty"
+    branchName = gitDetails.branchName ?: "Unknown"
+    gitHash = gitDetails.gitHash
+    gitHashFull = gitDetails.gitHashFull
+    commitDistance = gitDetails.commitDistance
+    lastTag = gitDetails.lastTag
+    isCleanTag = gitDetails.isCleanTag
+} catch (IllegalArgumentException e) {
+    logger.info "Got an error trying to read VCS metadata from git. It's possible this project is not under VCS control. Using placeholder values for manifest entries."
+    isDirty = true
+    branchName = "Unknown"
+    gitHash = "None"
+    gitHashFull = "None"
+    commitDistance = 0
+    lastTag = "None"
+    isCleanTag = false
 }
 
 compileJava {
@@ -151,87 +126,100 @@ jacocoTestReport {
     reports {
         xml.enabled = false
         csv.enabled = false
-        html.destination file("${buildDir}/jacocoHtml")
+        html.enabled = true
     }
 }
 
-lombok {
-    version = dependencyManagement.importedProperties["lombok.version"]
-    sha256 = dependencyManagement.importedProperties["lombok.checksum"]
-}
-
-task fatJar(type: Jar) {
-    zip64 true
-    baseName = project.name + "-all"
-    from {
-        configurations.compileAndInclude.collect { it.isDirectory() ? it : zipTree(it) }
-    } {
-        exclude "META-INF/*.SF"
-        exclude "META-INF/*.DSA"
-        exclude "META-INF/*.RSA"
-    }
-    with jar
-}
-
-publishing.publications {
-    mavenJava(MavenPublication) {
-        from components.java
-
-        pom.withXml {
-            def root = asNode()
-            root.appendNode("name", "XNAT LDAP Authentication Plugin")
-            root.appendNode("url", "https://bitbucket.org/xnatx/xnat-ldap-auth-plugin")
-            root.appendNode("inceptionYear", "2019")
-
-            def scm = root.appendNode("scm")
-            scm.appendNode("url", "https://bitbucket.org/xnatx/xnat-ldap-auth-plugin")
-            scm.appendNode("connection", "scm:https://bitbucket.org/xnatx/xnat-ldap-auth-plugin")
-            scm.appendNode("developerConnection", "scm:git@bitbucket.org:xnatx/xnat-ldap-auth-plugin.git")
-
-            def license = root.appendNode("licenses").appendNode("license")
-            license.appendNode("name", "Simplified BSD 2-Clause License")
-            license.appendNode("url", "http://xnat.org/about/license.php")
-            license.appendNode("distribution", "repo")
-
-            root.appendNode("developers").with {
-                def rherrick = appendNode("developer")
-                rherrick.appendNode("id", "rherrick")
-                rherrick.appendNode("name", "Rick Herrick")
-                rherrick.appendNode("email", "jrherrick@wustl.edu")
-            }
-        }
-    }
-}
-
-publishing.repositories {
-    maven {
-        credentials {
-            // These properties must be set in the ~/.gradle/gradle.properties file or passed on the Gradle command
-            // line in the form -PrepoUsername=foo -PrepoPassword=bar.
-            username propertyWithDefault("repoUsername", "username")
-            password propertyWithDefault("repoPassword", "password")
-        }
-        if (project.version.endsWith("-SNAPSHOT")) {
-            url "https://nrgxnat.jfrog.io/nrgxnat/libs-snapshot-local"
-        } else {
-            url "https://nrgxnat.jfrog.io/nrgxnat/libs-release-local"
-        }
+jar {
+    manifest {
+        attributes "Application-Name": project.description,
+                "Build-Date": buildDate,
+                "Build-Number": buildNumber,
+                "Implementation-Version": project.version,
+                "Implementation-Sha": gitHash,
+                "Implementation-Sha-Full": gitHashFull,
+                "Implementation-Commit": commitDistance,
+                "Implementation-LastTag": lastTag,
+                "Implementation-Branch": branchName,
+                "Implementation-CleanTag": isCleanTag,
+                "Implementation-Dirty": isDirty
     }
 }
 
 sourceSets {
     main {
         java {
-            srcDir "src/main/java"
             srcDir "build/xnat-generated/src/main/java"
         }
         resources {
-            srcDir "src/main/resources"
             srcDir "build/xnat-generated/src/main/resources"
         }
     }
 }
 
-def propertyWithDefault(String name, Object value) {
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            from components.java
+
+            versionMapping {
+                usage("java-api") {
+                    fromResolutionOf("runtimeClasspath")
+                }
+                usage("java-runtime") {
+                    fromResolutionResult()
+                }
+            }
+
+            pom.withXml {
+                def root = asNode()
+                root.appendNode("name", "XNAT LDAP Authentication Plugin")
+                root.appendNode("url", "https://bitbucket.org/xnatx/ldap-auth-plugin")
+                root.appendNode("inceptionYear", "2017")
+
+                def scm = root.appendNode("scm")
+                scm.appendNode("url", "https://bitbucket.org/xnatx/ldap-auth-plugin")
+                scm.appendNode("connection", "scm:https://bitbucket.org/xnatx/ldap-auth-plugin")
+                scm.appendNode("developerConnection", "scm:git@bitbucket.org:xnatx/ldap-auth-plugin.git")
+
+                def license = root.appendNode("licenses").appendNode("license")
+                license.appendNode("name", "Simplified BSD 2-Clause License")
+                license.appendNode("url", "https://xnat.org/about/license.php")
+                license.appendNode("distribution", "repo")
+
+                root.appendNode("developers").with {
+                    def rherrick = appendNode("developer")
+                    rherrick.appendNode("id", "rherrick")
+                    rherrick.appendNode("name", "Rick Herrick")
+                    rherrick.appendNode("email", "jrherrick@wustl.edu")
+
+                    def mfmckay = appendNode("developer")
+                    mfmckay.appendNode("id", "mfmckay")
+                    mfmckay.appendNode("name", "Mike McKay")
+                    mfmckay.appendNode("email", "mfmckay@wustl.edu")
+
+                    def kalpert = appendNode("developer")
+                    kalpert.appendNode("id", "kalpert")
+                    kalpert.appendNode("name", "Kate Alpert")
+                    kalpert.appendNode("email", "kate@radiologics.com")
+                }
+            }
+        }
+    }
+
+    repositories {
+        maven {
+            credentials {
+                // These properties must be set in the ~/.gradle/gradle.properties file or passed on the Gradle command
+                // line in the form -PrepoUsername=foo -PrepoPassword=bar.
+                username propertyWithDefault("repoUsername", "username")
+                password propertyWithDefault("repoPassword", "password")
+            }
+            url "https://nrgxnat.jfrog.io/nrgxnat/libs-${project.version.endsWith("-SNAPSHOT") ? "snapshot" : "release"}-local"
+        }
+    }
+}
+
+String propertyWithDefault(String name, Object value) {
     hasProperty(name) ? property(name) : value
 }
