--- a/settings.gradle
+++ b/settings.gradle
@@ -7,5 +7,16 @@
  * Released under the Simplified BSD.
  */
 
+pluginManagement {
+    repositories {
+        mavenLocal()
+        gradlePluginPortal()
+        mavenCentral()
+        maven { url "https://nrgxnat.jfrog.io/nrgxnat/gradle-plugins-release" }
+        maven { url "https://nrgxnat.jfrog.io/nrgxnat/gradle-plugins-snapshot" }
+        maven { url "https://nrgxnat.jfrog.io/nrgxnat/libs-release" }
+        maven { url "https://nrgxnat.jfrog.io/nrgxnat/libs-snapshot" }
+    }
+}
+
 rootProject.name = "ldap-auth-plugin"
-enableFeaturePreview("STABLE_PUBLISHING")
