--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,7 @@ plugins {
 }
 
 group "org.nrg.xnatx.plugins.auth"
-version "1.1.0"
+version "1.1.0.polaris1"
 description = "XNAT LDAP Authentication Provider"
 
 repositories {
